--- a/style.css
+++ b/style.css
@@ -29,4 +29,34 @@ header {
     align-items: center;
   }
 
-  
+  .logo{
+
+    margin:0px;
+    padding-left:5px;
+
+  }
+
+  .main {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .content {
+    flex: 70%;
+    border: 0.2rem solid rgba(0, 0, 0, 0.1);
+  }
+
+  .about {
+    flex: 30%;
+    border: 0.2rem solid rgba(0, 0, 0, 0.1);
+  }
+
+  nav a {
+    text-decoration: none;
+    color: #fff;
+    margin: 0 15px;
+    display: block;
+  }
+
+
+
