--- a/style.css
+++ b/style.css
@@ -30,8 +30,7 @@ header {
   }
 
   .logo{
-
-    margin:0px;
+    
     padding-left:5px;
 
   }
@@ -57,6 +56,37 @@ header {
     margin: 0 15px;
     display: block;
   }
+
+  nav {
+    margin: 0 auto;
+    width: 100%;
+    height: auto;
+    display: flex;
+    font-size: 20px;
+  }
+
+  nav ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    float: right;
+    display: inline-block;
+  }
+
+  nav ul li {
+    position: relative;
+    margin: 0 20px 0 200px;
+    float: right;
+    display: inline-block;
+  }
+
+  nav ul li a:hover {
+    opacity: 0.5;
+  }
+
+ 
+  
+
 
 
 
