--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 
+html{
+  font-size: 62.5%;
+}
+
 body,
 h1,
 h2,
@@ -16,6 +20,7 @@ body {
     font-family: "Calibri", sans-serif;
     background-color: #f5f5f5;
     color: #333;
+    font-size: 1.8rem;
   }
 
 
@@ -62,7 +67,7 @@ header {
     width: 100%;
     height: auto;
     display: flex;
-    font-size: 20px;
+    font-size: 2.0rem;
   }
 
   nav ul {
@@ -85,8 +90,22 @@ header {
   }
 
  
-  
 
+/* Hero Part */
+section#hero {
+  text-align: center;
+}
 
+section#hero video {
+  width: 100%;
 
+}
+
+section#hero p {
+  /*style for paragraph*/
+  font-size: 18px;
+  line-height: 1.6;
+  color: #666;
+  margin-top: 20px;
+}
 
