--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ section#hero p {
 
 /* Style for the CTA Button */
 .cta-button {
-  background-color: #00a69c; /* Turquoise Blue */
+  background-color: #00a69c; 
   color: #fff;
   padding: 15px 30px;
   margin-top: 20px;
@@ -121,7 +121,7 @@ section#hero p {
   cursor: pointer;
   text-decoration: none;
   display: inline-block;
-  transition: background-color 0.3s ease; /* Smooth transition on hover */
+  transition: background-color 0.3s ease; 
 }
 
 .cta-button:hover {
@@ -131,7 +131,30 @@ section#hero p {
 section#about {
   text-align: center;
   padding: 50px;
-  margin: 20px; /* Space around the section */
-  max-width: 800px; /* Maximum width for the content */
-  margin: 0 auto; /* Center the section */
+  margin: 20px; 
+  max-width: 800px; 
+  margin: 0 auto; 
+}
+/*Services page styles*/
+section#services {
+  text-align: center;
+  padding: 50px;
+  margin: 20px; 
+  max-width: 800px;
+  margin: 0 auto; 
+}
+
+section#services h2,
+section#services h3 {
+  margin-bottom: 20px;
+}
+
+section#services p {
+  margin-bottom: 44px; 
+}
+
+#services img {
+  max-width: 100%; 
+  height: auto;
+  margin-bottom: 20px;
 }
