--- a/style.css
+++ b/style.css
@@ -15,7 +15,14 @@ button {
   margin: 0;
   padding: 0;
 }
-
+h1,
+h2,
+h3 {
+  font-family: "Sofia Pro", sans-serif;
+}
+p {
+  font-family: "Calibri", sans-serif;
+}
 body {
     font-family: "Calibri", sans-serif;
     background-color: #f5f5f5;
@@ -157,4 +164,12 @@ section#services p {
   max-width: 100%; 
   height: auto;
   margin-bottom: 20px;
+}
+/* Contact Us Section */
+section#contact {
+  text-align: center;
+  padding: 50px;
+  margin: 20px; /* Space around the section */
+  max-width: 800px; /* Maximum width for the content */
+  margin: 0 auto; /* Center the section */
 }
