--- a/style.css
+++ b/style.css
@@ -169,7 +169,8 @@ section#services p {
 section#contact {
   text-align: center;
   padding: 50px;
-  margin: 20px; /* Space around the section */
-  max-width: 800px; /* Maximum width for the content */
-  margin: 0 auto; /* Center the section */
+  margin: 20px; 
+  max-width: 800px; 
+  margin: 0 auto;
 }
+
