--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 
 html{
+ 
   font-size: 62.5%;
 }
 
@@ -14,7 +15,7 @@ form,
 button {
   margin: 0;
   padding: 0;
-}
+} 
 h1,
 h2,
 h3 {
@@ -29,7 +30,7 @@ body {
     color: #333;
     font-size: 1.8rem;
   }
-
+ 
 
 /* Header Styling */
 header {
@@ -64,31 +65,26 @@ header {
 
   nav a {
     text-decoration: none;
-    color: #fff;
+    color: #333;
     margin: 0 15px;
     display: block;
   }
 
   nav {
     margin: 0 auto;
-    width: 100%;
-    height: auto;
-    display: flex;
     font-size: 2.0rem;
   }
 
   nav ul {
+    list-style-type: none;
     margin: 0;
     padding: 0;
-    list-style-type: none;
-    float: right;
-    display: inline-block;
-  }
+    display: none;
+}
 
   nav ul li {
     position: relative;
     margin: 0 20px 0 200px;
-    float: right;
     display: inline-block;
   }
 
@@ -96,7 +92,12 @@ header {
     opacity: 0.5;
   }
 
- 
+  .show-items {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    
+}
 
 /* Hero Part */
 section#hero {
@@ -217,6 +218,25 @@ footer {
 
 @media (min-width: 1024px) {
   /* Adjustments for Desktop screens */
+  header {
+    align-items: center;
+    justify-content: initial;
+  }
+
+  nav {
+    padding-top: 0;
+    margin-left: 100px;
+  }
+
+  nav .toggle {
+    display: none;
+  }
+
+  #nav-items {
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+  }
   section#about {
     max-width: 800px;
 }
