--- a/style.css
+++ b/style.css
@@ -34,8 +34,7 @@ body {
 
 /* Header Styling */
 header {
-    background-color: var(--turquoise-blue);
-    color: #fff;
+    background-color: #00a69c;
     padding: 0.5em;
     display: flex;
     justify-content: space-between;
@@ -55,12 +54,12 @@ header {
 
   .content {
     flex: 70%;
-    border: 0.2rem solid rgba(0, 0, 0, 0.1);
+    /* border: 0.2rem solid rgba(0, 0, 0, 0.1); */
   }
 
   .about {
     flex: 30%;
-    border: 0.2rem solid rgba(0, 0, 0, 0.1);
+    /* border: 0.2rem solid rgba(0, 0, 0, 0.1); */
   }
 
   nav a {
@@ -117,6 +116,32 @@ section#hero p {
   margin-top: 20px;
 }
 
+.features{
+  padding: 40px;
+}
+.featuresWrapper a {
+   text-decoration: none;
+}
+.feature {
+  display: flex;
+  flex-direction: column;
+  padding: 30px; 
+ background-color: aliceblue;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  margin:30px 0px;
+}
+.smImages {
+   width: 80px;
+   margin:auto ;
+}
+.device1{
+  padding: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
 /* Style for the CTA Button */
 .cta-button {
   background-color: #00a69c; 
@@ -166,6 +191,7 @@ section#services p {
   height: auto;
   margin-bottom: 20px;
 }
+
 /* Contact Us Section */
 section#contact {
   text-align: center;
@@ -239,5 +265,16 @@ footer {
   }
   section#about {
     max-width: 800px;
+}
+
+.features{
+  width:1170px;
+  margin: auto;
+}
+.featuresWrapper{
+  display: flex;
+  justify-content: space-between;
+  gap:50px;
+
 }
 }
