--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ p {
 }
 body {
     font-family: "Calibri", sans-serif;
-    background-color: #f5f5f5;
+    background-color: #ffffff;
     color: #333;
     font-size: 1.8rem;
   }
@@ -35,15 +35,15 @@ body {
 /* Header Styling */
 header {
     background-color: #00a69c;
-    padding: 0.5em;
+    padding: 2.5em;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items:center;
   }
 
   .logo{
     
-    padding-left:5px;
+    padding-left:1px;
 
   }
 
@@ -53,13 +53,25 @@ header {
   }
 
   .content {
-    flex: 70%;
-    /* border: 0.2rem solid rgba(0, 0, 0, 0.1); */
+    flex: 30%;
+    margin-top: 10px;
+    font-size: xx-large;
+    
   }
 
   .about {
     flex: 30%;
-    /* border: 0.2rem solid rgba(0, 0, 0, 0.1); */
+    
+    background-color: rgb(74,163,156); 
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin:30px 0px;
+  }
+
+  .about p{
+    font-size:1.8rem;
+    
+
   }
 
   nav a {
