--- a/style.css
+++ b/style.css
@@ -68,6 +68,8 @@ header {
   background-color: rgb(74,163,156); 
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin:30px 0px;
+  margin-bottom: 70px;
+  padding-bottom: 50px;
   }
 
   .about p{
@@ -89,9 +91,14 @@ header {
 
   width: 100%;
   margin-top: 30px;
-
+  
 }
 
+.about h3{
+  font-size: xx-large;
+  margin-top: 60px;
+
+}
 
 
   nav a {
@@ -169,6 +176,8 @@ section#hero p {
 
 .features{
   padding: 40px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 .featuresWrapper a {
    text-decoration: none;
@@ -177,12 +186,46 @@ section#hero p {
   display: flex;
   flex-direction: column;
   padding: 30px; 
-  background-color: aliceblue;
+  background-color: rgb(49, 49, 49);
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgba(113, 2, 2, 0.1);
   text-align: center;
   margin:30px 0px;
 }
+
+.features h2{
+
+  font-size: 3.0rem;
+  margin-top: 1px;
+  margin-bottom: 8px;
+  color: #050404;
+  text-align: center;
+
+}
+
+.feature h3{
+
+  font-size: 2.0rem;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  color: #fff;
+
+}
+ 
+.features p{
+
+font-size: 1.8rem;
+margin-top: 40px;
+text-align: center;
+margin-bottom: 40px;
+
+}
+
+.feature a{
+color:#2b2b2b;
+
+}
+
 .smImages {
    width: 10px;
    margin:auto ;
@@ -195,9 +238,10 @@ section#hero p {
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
+
 /* Style for the CTA Button */
 .cta-button {
-  background-color: #00a69c; 
+  background-color: #2b2b2b; 
   color: #fff;
   padding: 15px 30px;
   margin-top: 20px;
@@ -208,6 +252,13 @@ section#hero p {
   text-decoration: none;
   display: inline-block;
   transition: background-color 0.3s ease; 
+  margin-bottom: 40px;
+}
+
+.cta-button a{
+
+color: #fff;
+
 }
 
 .cta-button:hover {
@@ -233,6 +284,7 @@ section#services {
 section#services h2,
 section#services h3 {
   margin-bottom: 20px;
+  
 }
 
 section#services p {
@@ -354,11 +406,19 @@ section#contact {
 }
 
 /* Footer */
-footer {
+footer h5{
   background-color: #333;
   color: #fff;
   text-align: center;
-  padding: 1em;
+  padding: 2em;
+  font-size: 1.0rem;
+}
+
+footer p{
+
+  font-size: 0.9rem;
+  text-align: center;
+  font-weight: 300;
 }
 
 @media (min-width: 1024px) {
