--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
+html {
 
-html{
- 
   font-size: 62.5%;
 }
 
@@ -15,142 +14,147 @@ form,
 button {
   margin: 0;
   padding: 0;
-} 
+}
+
 h1,
 h2,
 h3 {
   font-family: "Sofia Pro", sans-serif;
 }
+
 p {
   font-family: "Calibri", sans-serif;
 }
+
 body {
-    font-family: "Calibri", sans-serif;
-    background-color: #ffffff;
-    color: #333;
-    font-size: 1.8rem;
-  }
- 
+  font-family: "Calibri", sans-serif;
+  background-color: #ffffff;
+  color: #333;
+  font-size: 1.8rem;
+}
+
 
 /* Header Styling */
 header {
-    background-color: #00a69c;
-    padding: 2.5em;
-    display: flex;
-    justify-content: space-between;
-    align-items:center;
-  }
+  background-color: #00a69c;
+  padding: 2.5em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-  .logo{
-    
-    padding-left:1px;
+.logo {
 
-  }
+  padding-left: 1px;
 
-  .main {
-    display: flex;
-    flex-direction: column;
-  }
+}
 
-  .content {
-    flex: 30%;
-    margin-top: 10px;
-    font-size: xx-large;
-    
-  }
+.main {
+  display: flex;
+  flex-direction: column;
+}
 
-  .about {
-    flex: 30%;
-    color: #ffffff;
-    font-weight: 400;
-    margin-top: 60px;
-   padding-top: 60px; 
-  background-color: rgb(74,163,156); 
+.content {
+  flex: 30%;
+
+
+
+}
+
+.about {
+  flex: 30%;
+  color: #ffffff;
+  font-weight: 400;
+  margin-top: 60px;
+  padding-top: 60px;
+  background-color: rgb(30, 30, 30);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  margin:30px 0px;
+  margin: 30px 0px;
   margin-bottom: 70px;
   padding-bottom: 50px;
-  }
+}
 
-  .about p{
-    margin-top: 50px;
-    font-size:1.8rem;
-    color: #ffffff; 
-    
+.about p {
+  margin-top: 50px;
+  font-size: 1.8rem;
+  color: #a4a4a4;
+  font-weight: 20px;
 
-  }
 
-  .about a{
-    margin-top: 10px;
-    font-size:1.8rem;
-    color: #1d6962;
-    
-  }
+}
 
-.about img{
+.about a {
+  margin-top: 10px;
+  font-size: 1.4rem;
+  color: #838383;
+
+}
+
+.about img {
 
   width: 100%;
   margin-top: 30px;
-  
+
 }
 
-.about h3{
-  font-size: xx-large;
+.about h3 {
+  font-size: 3.0rem;
   margin-top: 60px;
 
+
 }
 
 
-  nav a {
-    text-decoration: none;
-    color: #9bd9d4;
-    margin:0 15px ;
-    display: block;
-  }
-
-
-  nav {
-    
-    margin: 0 auto;
-    font-size: 2.0rem;
-  }
-
-  nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: none;
-    
-    
+nav a {
+  text-decoration: none;
+  color: #9bd9d4;
+  margin: 0 15px;
+  display: block;
 }
 
-  nav ul li {
-    position: relative;
-    margin: 0 20px 0 200px;
-    display: inline-block;
-    
-  }
 
-  nav ul li a:hover {
-    opacity: 0.5;
-  }
+nav {
+
+  margin: 0 auto;
+  font-size: 2.0rem;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: none;
+
+
+}
+
+nav ul li {
+  position: relative;
+  margin: 0 20px 0 200px;
+  display: inline-block;
+
+}
+
+nav ul li a:hover {
+  opacity: 0.5;
+}
 
 
 
-  .show-items {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    
+.show-items {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+
 }
 
 /* Hero Part */
 section#hero {
   text-align: center;
-  
+
 }
 
-section#hero h1{
+section#hero h1 {
   font-size: 50px;
   margin-top: 40px;
   color: #4AA39C;
@@ -160,7 +164,9 @@ section#hero h1{
 section#hero video {
   width: 100%;
 
+
 }
+
 
 section#hero p {
   /*style for paragraph*/
@@ -174,26 +180,29 @@ section#hero p {
   padding-right: 40px;
 }
 
-.features{
+.features {
   padding: 40px;
   padding-top: 20px;
   padding-bottom: 20px;
+
 }
+
 .featuresWrapper a {
-   text-decoration: none;
+  text-decoration: none;
 }
+
 .feature {
   display: flex;
   flex-direction: column;
-  padding: 30px; 
-  background-color: rgb(49, 49, 49);
+  padding: 30px;
+  background-color: rgb(74, 163, 156);
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(113, 2, 2, 0.1);
   text-align: center;
-  margin:30px 0px;
+  margin: 30px 0px;
 }
 
-.features h2{
+.features h2 {
 
   font-size: 3.0rem;
   margin-top: 1px;
@@ -203,7 +212,7 @@ section#hero p {
 
 }
 
-.feature h3{
+.feature h3 {
 
   font-size: 2.0rem;
   margin-top: 8px;
@@ -211,28 +220,29 @@ section#hero p {
   color: #fff;
 
 }
- 
-.features p{
 
-font-size: 1.8rem;
-margin-top: 40px;
-text-align: center;
-margin-bottom: 40px;
+.features p {
+
+  font-size: 1.8rem;
+  margin-top: 40px;
+  text-align: center;
+  margin-bottom: 40px;
 
 }
 
-.feature a{
-color:#2b2b2b;
+.feature a {
+  color: #2b2b2b;
 
 }
 
 .smImages {
-   width: 10px;
-   margin:auto ;
+  width: 10px;
+  margin: auto;
 }
-.device1{
+
+.device1 {
   padding: 40px;
-  background-color:rgb(245, 245, 245);
+  background-color: rgb(245, 245, 245);
   margin-top: 25px;
   margin-bottom: 20px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
@@ -241,7 +251,7 @@ color:#2b2b2b;
 
 /* Style for the CTA Button */
 .cta-button {
-  background-color: #2b2b2b; 
+  background-color: #2b2b2b;
   color: #fff;
   padding: 15px 30px;
   margin-top: 20px;
@@ -251,30 +261,31 @@ color:#2b2b2b;
   cursor: pointer;
   text-decoration: none;
   display: inline-block;
-  transition: background-color 0.3s ease; 
+  transition: background-color 0.3s ease;
   margin-bottom: 40px;
 }
 
-.cta-button a{
+.cta-button a {
 
-color: #fff;
+  color: #fff;
 
 }
 
 .cta-button:hover {
-  background-color: #008579; /* Darker Turquoise Blue on hover */
+  background-color: #008579;
+  /* Darker Turquoise Blue on hover */
 }
 
 section#about {
   text-align: center;
   padding: 50px;
-  margin: 20px; 
-  max-width: 800px; 
-  margin: 0 auto; 
+  margin: 20px;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 /* Footer */
-footer h5{
+footer h5 {
   background-color: #333;
   color: #fff;
   text-align: center;
@@ -282,7 +293,7 @@ footer h5{
   font-size: 1.0rem;
 }
 
-footer p{
+footer p {
 
   font-size: 0.9rem;
   text-align: center;
@@ -298,12 +309,13 @@ header {
   padding: 2.5em;
   display: flex;
   justify-content: space-between;
-  align-items:center;
+  align-items: center;
 }
 
-.logo{
-  
-  padding-left:1px;
+.logo {
+
+  padding-left: 1px;
+  width: auto;
 
 }
 
@@ -311,13 +323,13 @@ header {
 nav a {
   text-decoration: none;
   color: #9bd9d4;
-  margin:0 15px ;
+  margin: 0 15px;
   display: block;
 }
 
 
 nav {
-  
+
   margin: 0 auto;
   font-size: 2.0rem;
 }
@@ -327,15 +339,15 @@ nav ul {
   margin: 0;
   padding: 0;
   display: none;
-  
-  
+
+
 }
 
 nav ul li {
   position: relative;
   margin: 0 20px 0 200px;
   display: inline-block;
-  
+
 }
 
 nav ul li a:hover {
@@ -348,158 +360,151 @@ nav ul li a:hover {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  
+
 }
 
-
-/* 
-section#services {
-  text-align: center;
-  padding: 50px;
-  margin: 20px; 
-  max-width: 800px;
-  margin: 0 auto; 
-}
-/* 
-section#services h2,
-section#services h3 {
-  margin-bottom: 20px;
-  
-} */
 
 
 section#services p {
-  margin-bottom: 44px; 
+  margin-bottom: 44px;
 }
 
 #services img {
-  max-width: 100%; 
+  max-width: 100%;
   height: auto;
   margin-bottom: 20px;
-} */
+}
+
+*/
 
 /* ************************* */
-.services{
+.services {
   padding: 40px;
 }
+
 .servicesWrapper {
-   text-decoration: none;
-  
-   
+  text-decoration: none;
+
+
 }
 
-/* div.devices {
-
-  background-color: #ffffff;
-} */
 
 div.devices {
 
- margin-top: 50px;
+  margin-top: 50px;
   display: flex;
-  flex-direction:column;
-  padding: 1px; 
-  background-color: rgb(74,163,156);
+  flex-direction: column;
+  padding: 1px;
+  background-color: rgb(140, 181, 177);
   border-radius: 0px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   text-align: center;
-  
+
 }
 
 .subH1 {
 
 
-margin-top: 80px;
-font-size: 3.0rem;
-margin-bottom: 8px;
-color: #050404;
-text-align: center;
+  padding-top: 50px;
+  font-size: 3.0rem;
+  margin-bottom: 8px;
+  color: #050404;
+  text-align: center;
+
+}
+
+.services_Wrapper p {
+
+  font-size: 1.8rem;
+  margin-top: 40px;
+  text-align: center;
+  margin-bottom: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
 
 }
 
 .device1 {
- margin-left: 20px;
- margin-right: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
 
 }
 
-.device1 h3{
-  
-color: #4AA39C;
-margin-top: 20px;
-margin-bottom: 20px;
+.device1 h3 {
 
- 
- }
-
-section.services_Wrapper{
-
-background-color: #ffffff;
-
-}
-
-
-.device1 a{
-
-color: #4AA39C;
-font-size: 0.8rem;
-
-}
-/* .smImages {
-   width: 80px;
-   margin:auto ;
-} */
-/* .device1{
-  padding: 20px;
+  color: #4AA39C;
+  margin-top: 20px;
   margin-bottom: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-} */
+
+
+}
+
+section.services_Wrapper {
+
+  background-color: rgb(255, 255, 255);
+
+}
+
+
+.device1 a {
+
+  color: #4AA39C;
+  font-size: 0.8rem;
+
+}
 
 
 
-.products{
- margin-left: 170px;
- margin-top: 50px;
- display: flex;
+.products {
+  margin-left: 170px;
+  margin-top: 50px;
+  display: flex;
   flex-direction: column;
-  padding: 50px; 
- background-color: rgb(247, 247, 247); 
+  padding: 50px;
+  background-color: rgb(247, 247, 247);
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  margin:30px 0px;
- text-align:left;
+  margin: 30px 0px;
+  text-align: left;
 }
 
-.products h2{
+.products h2 {
 
-text-align: center;
-margin-top: 20px ;
-margin-bottom: 20px;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
-.products p{
+.products p {
+
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+
+
+}
+
+
+/* .products img{
 
 display: flex;
-justify-content: center;
-margin-top: 20px;
+flex-direction: row;
 
+} */
 
+.prices {
+  padding: 30px;
 }
 
+.prices h2 {
 
-.prices{
-  padding:30px;
-}
+  margin-top: 25px;
+  font-size: 3.0rem;
+  margin-bottom: 8px;
+  color: #050404;
+  text-align: center;
+  margin-bottom: 20px;
 
-.prices h2{
-
-margin-top: 25px;
-font-size: 3.0rem;
-margin-bottom: 8px;
-color: #050404;
-text-align: center;
-margin-bottom:20px;
- 
 
 }
 
@@ -507,7 +512,7 @@ margin-bottom:20px;
 table {
   width: 100%;
   border-collapse: collapse;
-  margin-top:40px;
+  margin-top: 40px;
 }
 
 th,
@@ -518,36 +523,36 @@ td {
 }
 
 th {
-  background-color:#4AA39C;
+  background-color: #4AA39C;
   color: #fff;
-  }
+}
 
-.prices h4{
+.prices h4 {
 
-color: #008579;
-line-height: 1.5;
-text-align: center;
-font-weight:bolder;
-margin-top: 50px;
-margin-bottom: 50px;
+  color: #008579;
+  line-height: 1.5;
+  text-align: center;
+  font-weight: bolder;
+  margin-top: 50px;
+  margin-bottom: 50px;
 
-  }
+}
 
-.prices p{
+.prices p {
 
-color: #464646;
-text-align: center;
-font-style: italic;
-font-weight: lighter;
-font-size: 1.5rem ;
-padding-left: 40px;
-padding-right: 40px;
-margin-bottom: 50px;
+  color: #464646;
+  text-align: center;
+  font-style: italic;
+  font-weight: lighter;
+  font-size: 1.5rem;
+  padding-left: 40px;
+  padding-right: 40px;
+  margin-bottom: 50px;
 
 }
 
 /* Footer */
-footer h5{
+footer h5 {
   background-color: #333;
   color: #fff;
   text-align: center;
@@ -555,7 +560,7 @@ footer h5{
   font-size: 1.0rem;
 }
 
-footer p{
+footer p {
 
   font-size: 0.9rem;
   text-align: center;
@@ -568,36 +573,37 @@ footer p{
 section#contact {
   text-align: center;
   padding: 50px;
-  margin: 20px; 
-  max-width: 800px; 
+  margin: 20px;
+  max-width: 800px;
   margin: 0 auto;
-}
-
-.contact h2{
-
-margin-top: 25px;
-font-size: 3.0rem;
-margin-bottom: 8px;
-color: #050404;
-text-align: center;
-margin-bottom:20px;
-
-
+  padding-top: 40px;
 
 }
 
 
-.contact-details p{
 
-margin-top: 25px;
-font-size: 2.0rem;
-line-height: 35px;
+.contact h2 {
+
+  font-size: 3.0rem;
+  margin-bottom: 8px;
+  color: #050404;
+  text-align: center;
 
 
 }
 
-.contact-details a{
-color: #464646;
+
+.contact-details p {
+
+  margin-top: 25px;
+  font-size: 2.0rem;
+  line-height: 35px;
+
+
+}
+
+.contact-details a {
+  color: #464646;
 
 }
 
@@ -632,21 +638,21 @@ color: #464646;
   cursor: pointer;
 }
 
-.cta h3{
+.cta h3 {
 
   margin-top: 25px;
   font-size: 3.0rem;
   margin-bottom: 8px;
   color: #4AA39C;
   text-align: center;
-  margin-bottom:20px;
+  margin-bottom: 20px;
 
 }
 
-.cta p{
+.cta p {
 
-margin-top: 20px;
-margin-bottom: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 
 
 
@@ -654,16 +660,17 @@ margin-bottom: 20px;
 
 .cta-button {
 
-  background-color: rgb(74,163,156);
+  background-color: rgb(74, 163, 156);
 
 }
 
 .contact-form button:hover {
-  background-color: #008579; /* Darker Turquoise Blue on hover */
+  background-color: #008579;
+  /* Darker Turquoise Blue on hover */
 }
 
 /* Footer */
-footer h5{
+footer h5 {
   background-color: #333;
   color: #fff;
   text-align: center;
@@ -671,7 +678,7 @@ footer h5{
   font-size: 1.0rem;
 }
 
-footer p{
+footer p {
 
   font-size: 0.9rem;
   text-align: center;
@@ -679,6 +686,7 @@ footer p{
 }
 
 @media (min-width: 1024px) {
+
   /* Adjustments for Desktop screens */
   header {
     align-items: center;
@@ -699,41 +707,310 @@ footer p{
     flex-direction: row;
     gap: 40px;
   }
+
   section#about {
     max-width: 800px;
-}
+  }
 
-.features{
-  width:1170px;
-  margin: auto;
-}
-.featuresWrapper{
-  display: flex;
-  justify-content: space-between;
-  gap:50px;
+  .features {
+    width: 1170px;
+    margin: auto;
+  }
 
-}
-.services_Wrapper{
-  width:1170px;
-  margin:auto;
-  padding-top: 80px;
-}
+  .featuresWrapper {
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
 
-.devices{
-  display: flex;
+  }
 
-  justify-content: space-between;
-  gap:50px;
-}
+  .services_Wrapper {
+    /* width:1170px; */
+    margin: auto;
+    padding-top: 80px;
 
-.device1{
-  width: 50%;
-}
-.serviceImg{
-  text-align: center;
-}
-.prices{
-width:1170px;
-margin:auto;
-}
+  }
+
+  .devices {
+    display: flex;
+
+    justify-content: space-between;
+    gap: 50px;
+  }
+
+  .device1 {
+    width: 50%;
+  }
+
+  .serviceImg {
+    text-align: center;
+  }
+
+  .prices {
+    width: 1170px;
+    margin: auto;
+  }
+
+
+  div.devices {
+
+    margin-top: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 1px;
+    background-color: rgb(140, 181, 177);
+    border-radius: 0px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    align-items: center;
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+
+  .subH1 {
+
+
+    padding-top: 10px;
+    font-size: 3.0rem;
+    margin-bottom: 8px;
+    color: #050404;
+    text-align: center;
+
+  }
+
+  .services_Wrapper p {
+
+    font-size: 1.8rem;
+    margin-top: 30px;
+    text-align: center;
+    margin-bottom: 40px;
+    padding-left: 80px;
+    padding-right: 80px;
+    padding-bottom: 20px;
+
+  }
+
+  .device1 {
+    margin-left: 20px;
+    margin-right: 20px;
+
+  }
+
+  .device1 h3 {
+
+    color: #4AA39C;
+    margin-top: 20px;
+    margin-bottom: 20px;
+
+
+
+  }
+
+
+  section.services_Wrapper {
+
+    background-color: #ffffff;
+    /* display: flex;
+  justify-content: center; */
+
+  }
+
+
+  .device1 a {
+
+    color: #4AA39C;
+    font-size: 0.8rem;
+
+
+  }
+
+  header {
+    background-color: #00a69c;
+    padding: 2.5em;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-right: auto;
+    padding-right: 100px;
+  }
+
+  .logo {
+
+    padding-left: 30px;
+
+  }
+
+  .main {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .content {
+    flex: 30%;
+
+
+
+  }
+
+
+  .products {
+    margin-left: 170px;
+    margin-right: 170px;
+    /* margin-top: 50px; */
+    display: flex;
+    flex-direction: column;
+    /* padding: 50px;  */
+    background-color: rgb(247, 247, 247);
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    /* margin:30px 0px; */
+    text-align: left;
+    padding-bottom: 30px;
+  }
+
+
+  .products h2 {
+
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: left;
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+
+
+  .products p {
+
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    display: flex;
+    justify-content: left;
+    padding-left: 60px;
+    padding-right: 60px;
+    gap: 40px;
+
+
+  }
+
+
+  .products img {
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+  }
+
+
+  /* Contact Us Section */
+
+  section#contact {
+    text-align: center;
+    padding: 50px;
+    margin: 20px;
+    max-width: 900px;
+    margin: 0 auto;
+    padding-top: 40px;
+
+  }
+
+  .contact-form {
+
+    display: flex;
+    display: inline;
+    padding-top: 20px;
+
+  }
+
+  .contact h2 {
+
+    font-size: 3.0rem;
+    padding-top: 30px;
+    margin-bottom: 50px;
+    color: #050404;
+    text-align: center;
+    display: flex;
+
+  }
+
+  .contact-details p {
+
+    margin-top: 25px;
+    font-size: 2.0rem;
+    line-height: 35px;
+
+
+  }
+
+  .contact-details a {
+    color: #464646;
+
+  }
+
+  /* Contact Form Styling */
+  .contact-form {
+    padding-top: 40px;
+    max-width: 400px;
+    margin: 0 auto;
+    padding-bottom: 40px;
+  }
+
+  .contact-form label {
+    display: block;
+    margin-bottom: 10px;
+    text-align: left;
+  }
+
+  .contact-form input,
+  .contact-form textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+  }
+
+  .contact-form button {
+    background-color: rgb(44, 44, 44);
+    color: #fff;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+
+  .cta h3 {
+
+    margin-top: 25px;
+    font-size: 3.0rem;
+    margin-bottom: 8px;
+    color: #4AA39C;
+    text-align: center;
+    margin-bottom: 20px;
+
+  }
+
+  .cta p {
+
+    margin-top: 20px;
+    margin-bottom: 20px;
+
+
+
+  }
+
+  .cta-button {
+
+    background-color: rgb(74, 163, 156);
+
+  }
+
+  .contact-form button:hover {
+    background-color: #008579;
+    /* Darker Turquoise Blue on hover */
+
+  }
 }
